--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "primeflex": "^2.0.0",
     "primeicons": "^4.1.0",
     "primeng": "^11.2.0",
+    "quill": "^1.3.7",
+    "quill-image-uploader": "^1.2.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
